# hominy-parser

./: pyproject.toml
customfuncs/: customFuncs.py
errs/: ctxAwareErr.py  errs.py
header/: header.py
schemahandler/: schemaHandler.py
transformctx/: ctx.py
